--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'org.jsoup:jsoup:1.7.2'
+    compile 'com.jakewharton:butterknife:5.1.2'
 }
