--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.getbase:floatingactionbutton:1.1.0'
+    compile 'me.drakeet.materialdialog:library:1.1.0'
 
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
