--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:0.14.0'
 
+        classpath 'com.novoda:bintray-release:0.2.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
