--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
 
+
+    compile 'com.facebook.stetho:stetho:1.3.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+
+
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
